version 20090918_1
Added support for reCAPTCHA because of problems with automated
spam on some pages.  By default the reCAPTCHA is not enabled.  To
enable it you have to fill one in, and to disable it you have to
fill one in.

version 20090815_1
Transfered the code to github.  When I checked it out onto a new
computer, I realized there was a folder missing, so I added it and
placed a .gitignore file in the folder so that the folder would be
tracked by git.
Updated the information about how to install potoss.

version 20090814_1
Fixed an issue which could have allowed people to accidentally change
the contents of read-only aliases page when creating new pages that
happened to link to them.

version 20090612_1
Added the ability to control read-only aliases directly from the
"advanced options" for a page.  In support of that new functionality
I added a slew of unit tests and one new Selenium test.

version 20090108_2
Added a bunch of Selenium assertions to the pre-existing
tst_encrypt_decrypt_page_content test.  It now checks for pressing enter
or clicking on the "encrypt" or "decrypt" buttons.  It also checks for the
confirmation dialog which pops up if you try to save a page that has the
encryption options showing but the text hasn't been encrypted. (Since the
user might have made a mistake, and might not want the contents going to the
server unencrypted)

version 20090108_1
Worked on the encryption stuff so that:
   * It automatically focuses on the blowfish key input on page load
   * It will encrypt or decrypt when you hit "Enter" while within the input.
   * The text you input is not visible while you type it.
I did all this stuff because I use an encrypted page, and I wanted to be able
to decrypt it more quickly without having to hit all sorts of buttons and
manually focus on the field.

version 20080727_1
Added the ability to hide pages from the 'find lost page'
results.  Added selenium tests for all sorts of variations on the 'find lost